tests/compile/no_reference.stderr
error[E0277]: Can not use `SomeTable` as a column type in schema `v0::Schema`
  --> tests/compile/no_reference.rs:10:21
   |
10 |         pub marker: SomeTable,
   |                     ^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `rust_query::schema::from_macro::SchemaType<v0::Schema>` is not implemented for `SomeTable`
  --> tests/compile/no_reference.rs:3:1
   |
 3 | #[schema(Schema)]
   | ^^^^^^^^^^^^^^^^^
   = note: Table names can be used as schema column types as long as they are not #[no_reference]
   = help: the following other types implement trait `rust_query::schema::from_macro::SchemaType<S>`:
             Option<T>
             String
             Vec<u8>
             f64
             i64
note: required by a bound in `TypBuilder::<S>::col`
  --> src/schema/from_macro.rs
   |
   |     pub fn col<T: SchemaType<S>>(&mut self, name: &'static str, span: (usize, usize)) {
   |                   ^^^^^^^^^^^^^ required by this bound in `TypBuilder::<S>::col`
   = note: this error originates in the attribute macro `schema` (in Nightly builds, run with -Z macro-backtrace for more info)
